tests/ui/impl-trait/recursive-impl-trait-type-indirect.drop_tracking_mir.stderr
error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:11:22
   |
LL | fn option(i: i32) -> impl Sized {
   |                      ^^^^^^^^^^ recursive opaque type
LL |
LL |     if i < 0 { None } else { Some((option(i - 1), i)) }
   |                ----          ------------------------ returning here with type `Option<(impl Sized, i32)>`
   |                |
   |                returning here with type `Option<(impl Sized, i32)>`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:16:15
   |
LL | fn tuple() -> impl Sized {
   |               ^^^^^^^^^^ recursive opaque type
LL |
LL |     (tuple(),)
   |     ---------- returning here with type `(impl Sized,)`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:21:15
   |
LL | fn array() -> impl Sized {
   |               ^^^^^^^^^^ recursive opaque type
LL |
LL |     [array()]
   |     --------- returning here with type `[impl Sized; 1]`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:26:13
   |
LL | fn ptr() -> impl Sized {
   |             ^^^^^^^^^^ recursive opaque type
LL |
LL |     &ptr() as *const _
   |     ------------------ returning here with type `*const impl Sized`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:31:16
   |
LL | fn fn_ptr() -> impl Sized {
   |                ^^^^^^^^^^ recursive opaque type
LL |
LL |     fn_ptr as fn() -> _
   |     ------------------- returning here with type `fn() -> impl Sized`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:36:25
   |
LL |   fn closure_capture() -> impl Sized {
   |                           ^^^^^^^^^^ recursive opaque type
...
LL | /     move || {
LL | |         x;
   | |         - closure captures itself here
LL | |     }
   | |_____- returning here with type `[closure@$DIR/recursive-impl-trait-type-indirect.rs:39:5: 39:12]`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:44:29
   |
LL |   fn closure_ref_capture() -> impl Sized {
   |                               ^^^^^^^^^^ recursive opaque type
...
LL | /     move || {
LL | |         &x;
   | |          - closure captures itself here
LL | |     }
   | |_____- returning here with type `[closure@$DIR/recursive-impl-trait-type-indirect.rs:47:5: 47:12]`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:52:21
   |
LL | fn closure_sig() -> impl Sized {
   |                     ^^^^^^^^^^ recursive opaque type
LL |
LL |     || closure_sig()
   |     ---------------- returning here with type `[closure@$DIR/recursive-impl-trait-type-indirect.rs:54:5: 54:7]`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:57:23
   |
LL | fn generator_sig() -> impl Sized {
   |                       ^^^^^^^^^^ recursive opaque type
LL |
LL |     || generator_sig()
   |     ------------------ returning here with type `[closure@$DIR/recursive-impl-trait-type-indirect.rs:59:5: 59:7]`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:62:27
   |
LL |   fn generator_capture() -> impl Sized {
   |                             ^^^^^^^^^^ recursive opaque type
...
LL | /     move || {
LL | |         yield;
LL | |         x;
   | |         - generator captures itself here
LL | |     }
   | |_____- returning here with type `[generator@$DIR/recursive-impl-trait-type-indirect.rs:65:5: 65:12]`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:71:35
   |
LL | fn substs_change<T: 'static>() -> impl Sized {
   |                                   ^^^^^^^^^^ recursive opaque type
LL |
LL |     (substs_change::<&T>(),)
   |     ------------------------ returning here with type `(impl Sized,)`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:76:24
   |
LL | fn generator_hold() -> impl Sized {
   |                        ^^^^^^^^^^ recursive opaque type
...
LL |         let x = generator_hold();
   |             - generator captures itself here

error[E0391]: cycle detected when computing type of `mutual_recursion::{opaque#0}`
  --> $DIR/recursive-impl-trait-type-indirect.rs:90:26
   |
LL | fn mutual_recursion() -> impl Sync {
   |                          ^^^^^^^^^
   |
note: ...which requires type-checking `mutual_recursion`...
  --> $DIR/recursive-impl-trait-type-indirect.rs:90:26
   |
LL | fn mutual_recursion() -> impl Sync {
   |                          ^^^^^^^^^
   = note: ...which requires evaluating trait selection obligation `mutual_recursion_b::{opaque#0}: core::marker::Sync`...
   = note: ...which again requires computing type of `mutual_recursion::{opaque#0}`, completing the cycle
note: cycle used when checking item types in top-level module
  --> $DIR/recursive-impl-trait-type-indirect.rs:8:1
   |
LL | / #![feature(generators)]
LL | | #![allow(unconditional_recursion)]
LL | |
LL | | fn option(i: i32) -> impl Sized {
...  |
LL | |
LL | | fn main() {}
   | |____________^

error: aborting due to 13 previous errors

Some errors have detailed explanations: E0391, E0720.
For more information about an error, try `rustc --explain E0391`.
